--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,7 +29,7 @@
         <input type="submit" value="Register Desa">
     </form>
 
-    <form action="/registerInvestor" method="post">
+    <form action="/registerInvestor" method="post" enctype="multipart/form-data">
         <input type="email" name="email" id="">
         <input type="password" name="password" id="">
         <input type="text" name="nama" id="">
