--- a/views/sideBarInvestor.ejs
+++ b/views/sideBarInvestor.ejs
@@ -25,7 +25,7 @@
         <div class="sub-menu">
             <a href="">Proyek</a>
             <a href="">Profil Investor</a>
-            <a href="">Jelajah Target Investasi</a>
+            <a href="/search">Jelajah Target Investasi</a>
         </div>
 
 
