--- a/views/dashboardDesa.ejs
+++ b/views/dashboardDesa.ejs
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <%- include('sideBarInvestor'); -%>
+    <%- include('sideBarDesa'); -%>
 
         <!-- <nav class="navbar fixed-top">
             <div class="nav-brand left">
