--- a/views/register.ejs
+++ b/views/register.ejs
@@ -30,11 +30,11 @@
     </form>
 
     <form action="/registerInvestor" method="post" enctype="multipart/form-data">
-        <input type="email" name="email" id="">
-        <input type="password" name="password" id="">
-        <input type="text" name="nama" id="">
-        <input type="text" name="location" id="">
-        <input type="text" name="description" id="">
+        <input placeholder="Masukan Email..." type="email" name="email" id="">
+        <input placeholder="Masukan Password..." type="password" name="password" id="">
+        <input placeholder="Masukan Nama Perusahaan..." type="text" name="nama" id="">
+        <input placeholder="Masukan Lokasi Perusahaan..." type="text" name="location" id="">
+        <input placeholder="Masukan Deskripsi Singkat Perusahaan" type="text" name="description" id="">
         <input type="file" name="photo" id="">
         <input type="submit" value="Register Investor">
     </form>
