--- a/views/sideBarInvestor.ejs
+++ b/views/sideBarInvestor.ejs
@@ -10,11 +10,16 @@
 </head>
 
 <body>
+ <img style="position: fixed;
+    top: 11px;
+    width: 160px;
+    margin: 14px;" src="img/koostoo-logo.svg" alt="">
     <nav>
         <div>
             <img width="280px" src="img/profileInvestor.png" alt="">
         </div>
 
+        <br>
         <div class="profil">
             <p class="nama-desa">PT. Maju Makmur</p>
             <p class="lokasi-desa">Wonogiri, Jawa Tengah</p>
