Fix dashboard dikit

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,7 +15,11 @@
         <input placeholder="Masukan Nama akun..." type="text" name="nama" id="">
         <textarea placeholder="Masukan Deskripsi Singkat..." name="description" id="" cols="30" rows="10"></textarea>
         <input placeholder="Masukan Lokasi..." type="text" name="location" id="">
+
+        <label for="portofolio">Portofolio</label>
         <input type="file" name="portofolio" id="portofolio">
+
+        <label for="photo">Foto</label>
         <input type="file" name="photo" id="photo">
 
         <input type="checkbox" name="cat1" id="" value="pertanian">
