--- a/views/sidebarDesa.ejs
+++ b/views/sidebarDesa.ejs
@@ -18,7 +18,7 @@
     <nav>
 
         <div>
-            <img width="280px" src="img/profileInvestor.png" alt="">
+            <img width="280px" src="img/profilDesa.png" alt="">
         </div>
         <br>
         <div class="profil">
@@ -29,9 +29,8 @@
 
 
         <div class="sub-menu">
-            <a href="">Proyek</a>
+            <a href="/dashboard">Proyek</a>
             <a href="">Profil Investor</a>
-            <a href="">Jelajah Target Investasi</a>
         </div>
 
 
