--- a/views/sideBarInvestor.ejs
+++ b/views/sideBarInvestor.ejs
@@ -15,8 +15,8 @@
     width: 160px;
     margin: 14px;" src="img/koostoo-logo.svg" alt="">
     <nav>
-        <div>
-            <img width="280px" src="user-uploads/img/<%=user.foto_perusahaan%>" alt="">
+        <div class="foto-wrapper">
+            <img class="foto-perusahaan" width="280px" src="user-uploads/img/<%=user.foto_perusahaan%>" alt="">
         </div>
 
         <br>
