--- a/views/sidebarDesa.ejs
+++ b/views/sidebarDesa.ejs
@@ -30,7 +30,7 @@
 
         <div class="sub-menu">
             <a href="/dashboard">Proyek</a>
-            <a href="">Profil Investor</a>
+            <a href="">Profil Desa</a>
         </div>
 
 
