--- a/views/jelajahTarget.ejs
+++ b/views/jelajahTarget.ejs
@@ -18,12 +18,9 @@
 
             <section style="margin-left:240px;">
                 <div class="search-bar">
-                    <form action="">
-                        <input class="input-pencarian" placeholder="Cari Desa..." name="cari-target"  type="text">
+                        <input class="input-pencarian" id="input-search" placeholder="Cari Desa..." name="cari-target"  type="text">
             
-                        <input class="button-submit"  type="submit" value="Cari">
-            
-                    </form>
+                        <input class="button-submit" onclick="search()"  type="submit" value="Cari">
                 </div>  
 
 
@@ -58,5 +55,16 @@
            
         </div>
 </body>
+<script>
+    function search(){
+        let query = document.getElementById("input-search");
+        if(query.value == ""){
+            return;
+        }
+        else{
+            window.location = "/search?keyword=" + query.value;
+        }
+    }
+</script>
 
 </html>
