--- a/views/sidebarDesa.ejs
+++ b/views/sidebarDesa.ejs
@@ -31,6 +31,8 @@
         <div class="sub-menu">
             <a href="/dashboard">Proyek</a>
             <a href="">Profil Desa</a>
+
+            <a href="/logout">Logout</a>
         </div>
 
 
