--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -243,7 +243,7 @@ p#tanggal-progress {
 
 /* login */
 
-.container {
+.container.login {
     display: flex;
 }
 
@@ -277,4 +277,12 @@ input.input-login {
     border: transparent;
     height: 32px;
     width: 300px;
+}
+
+.keahlian {
+    display: flex;
+}
+
+.keahlian div {
+    margin: 8px
 }
