--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,7 @@
 
 
     <div class="container login">
-        <form action="/loginDesa" method="post" id="login-desa">
+        <form action="/loginDesa" method="post" id="login-desa" class="col-6">
             <h2 id="login">Login Desa</h2>
             <div class="email">
                 <label for="email">Email</label><br>
@@ -32,7 +32,7 @@
             <input class="btn login" type="submit" value="Login Desa">
         </form>
 
-        <form action="/loginInvestor" method="post" id="login-investor">
+        <form action="/loginInvestor" method="post" id="login-investor" class="col-6">
             <h2 id="login">Login Investor</h2>
             <div class="email">
                 <label for="email">Email</label><br>
