--- a/views/aboutDesa.ejs
+++ b/views/aboutDesa.ejs
@@ -97,6 +97,7 @@
                     <label for="message-text" class="col-form-label">Proyek Selesai</label>
                     <input type="date" class="form-control" id="nama-proyek" name="projectEnd">
                 </div>
+                <input type="text" name="desa" value="<%=result.id_desa %>" style="display: none;">
 
 
                 <div class="form-group">
