--- a/views/dashboardInvestor.ejs
+++ b/views/dashboardInvestor.ejs
@@ -24,48 +24,139 @@
         <div class="container">
             <section class="menunggu-konfirmasi">
                 <h2 class="section-title">Menunggu Konfirmasi</h2>
-                <div class="belum-cari-target">
-                    <p>Tidak ada proyek yang sedang dalam tahap menunggu konfirmasi. Yuk, jalin kerja sama dengan desa sekarang!</p>
-                    <button>Cari target Investasi</button>
+                <% let bool=false%>
+                <div class="row">
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "menunggu") {%>
+                                  <% bool = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        
+                            <% } %>
+
+                <% } %>
+
+
                 </div>
+                <% if (!bool) {%>
+                    <div class="belum-cari-target">
+                        <p>Tidak ada proyek yang sedang dalam tahap menunggu konfirmasi. Yuk, jalin kerja sama dengan desa sekarang!</p>
+                        <a href="/search" class="portofolio-desa">Cari target Investasi</a>
+                    </div>
+                <%} %>
+
+
+                
             </section>
+
+
             <section class="dalam-pengerjaan">
                 <h2 class="section-title">Dalam Pengerjaan</h2>
+                <% let bool2=false%>
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Susu Segar 20 Liter/hari</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "dikerjakan") {%>
+                                  <% bool2 = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Susu Segar 20 Liter/hari</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        
+                            <% } %>
+
+                <% } %>
+
+
                 </div>
+                <% if (!bool2) {%>
+                    <div class="belum-cari-target">
+                        <p>Tidak ada proyek yang sedang dalam tahap pengerjaan. Yuk, jalin kerja sama dengan desa sekarang!</p>
+                        <a href="/search" class="portofolio-desa">Cari target Investasi</a>
+                    </div>
+                <%} %>
+
+
+                
             </section>
+
+
+
             <section class="selesai">
                 <h2 class="section-title">Selesai</h2>
+                <% let bool3=false%>
+                <div class="row">
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "selesai") {%>
+                                  <% bool3 = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                        
+                            <% } %>
 
-                <div class="card proyek-not-selesai">
-                    <p>Semua proyek Anda masih dalam tahap pengerjaan</p>
+                <% } %>
+
+
                 </div>
+                <% if (!bool3) {%>
+                    <div class="card proyek-not-selesai">
+                        <p>Semua proyek Anda masih dalam tahap pengerjaan</p>
+                    </div>
+                <%} %>
+
+
+               
             </section>
         </div>
+
+        <style>
+
+.portofolio-desa{
+    text-decoration: none;
+    background: #3B8C91;
+    padding: 4px 15px;
+    border-radius: 12px;
+    color: white;
+    font-size: 11px;
+    border: none;
+    letter-spacing: 0.045em;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 24px;
+    border: none;
+    margin: 8px;
+}
+
+        </style>
 </body>
 
 </html>
