--- a/views/sideBarInvestor.ejs
+++ b/views/sideBarInvestor.ejs
@@ -31,6 +31,7 @@
             <a href="/dashboard">Proyek</a>
             <a href="">Profil Investor</a>
             <a href="/search">Jelajah Target Investasi</a>
+            <a href="/logout">Logout</a>
         </div>
 
 
