--- a/views/dashboardInvestor.ejs
+++ b/views/dashboardInvestor.ejs
@@ -37,7 +37,7 @@
                                             <p class="card-text"><%=result[i].nama_perusahaan %></p>
                                             <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
                                             <div class="btn-selengkapnya">
-                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                                <a class="selengkapnya" href="/project?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -76,7 +76,7 @@
                                             <p class="card-text"><%=result[i].nama_perusahaan %></p>
                                             <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
                                             <div class="btn-selengkapnya">
-                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                                <a class="selengkapnya" href="/project?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
                                             </div>
                                         </div>
                                     </div>
@@ -116,7 +116,7 @@
                                             <p class="card-text"><%=result[i].nama_perusahaan %></p>
                                             <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
                                             <div class="btn-selengkapnya">
-                                                <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                                <a class="selengkapnya" href="/project?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
                                             </div>
                                         </div>
                                     </div>
