--- a/views/aboutDesa.ejs
+++ b/views/aboutDesa.ejs
@@ -26,6 +26,7 @@
             <section class="tawaran-kerjasama">
 
                 <div class="box-desa">
+                    <img style="fill: #3B8C91;opacity:0.5" width="96px" src="img/home.svg" alt="">
                     <div class="deskripsi-desa">
                         <h3 class="box-nama-desa">
                             <%=result.nama_desa %>
