--- a/views/aboutDesa.ejs
+++ b/views/aboutDesa.ejs
@@ -58,15 +58,11 @@
                 </div>
 
 
-                <div class="button-desa">
-                    <button target="_blank" class="portofolio-desa" href="user-uploads/pdf/<%=result.portofolio%>"> <img width="17px" src="img/portofolio.svg" alt=""> Portofolio Desa</button>
+                <div style="bottom:5%" class="button-desa">
+                    <button style="margin-right: 8px;" target="_blank" class="portofolio-desa" href="user-uploads/pdf/<%=result.portofolio%>"> <img width="17px" src="img/portofolio.svg" alt=""> Portofolio Desa</button>
                     <button data-toggle="modal" data-target="#exampleModal2" class="hubungi-desa" href=""> <img width="17px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
                 </div>
                 <!-- Modal -->
-
-
-
-
 
             </section>
 
