--- a/views/detailProyekInvestorSelesai.ejs
+++ b/views/detailProyekInvestorSelesai.ejs
@@ -12,6 +12,8 @@
 
 <body>
 
+
+
     <% if(user.nama_desa == null) {%>
     
         <button class="hubungi-investor"> <img width="22px" src="img/chatIcon.png" alt=""> Hubungi Desa</button>
@@ -26,7 +28,7 @@
                 <div class="card-atas">
                     <div class="proyek-title">
                         <div class="proyek-title-left">
-                            <img src="img/back-icon.svg" alt="">
+                            <img src="img/back-icon.svg" alt="" onclick="window.location='/dashboard'">
                         </div>
                         <div class="proyek-title-right">
                             <a class="proyek-title" href="#"><%=result.nama_proyek %></a>
@@ -39,16 +41,17 @@
                                 <div class="card-body desc-proyek">
                                     <div class="left-green"></div>
                                     <div class="deadline">
-                                        <h5 class="card-title deadline">20</h5>
+                                        <% let days = result.waktu_target_selesai.toString().split(" ").slice(0, 4) %>
+                                        <h5 class="card-title deadline"><%= days[2] %></h5>
                                         <div class="hari-tersisa">
-                                            <p>hari</p>
-                                            <p>tersisa</p>
+                                            <p><%= days[1] %></p>
+                                            <p><%= days[3] %></p>
                                         </div>
                                     </div>
 
-                                     <p> <% result.waktu_target_selesai.toString().split(" ").slice(0, 4).join(" ") %></p>  
-
-                                    <p class="card-text deadline"><%=result.waktu_target_selesai %></p>
+                                     <!-- <p> <% let day = result.waktu_target_selesai.toString().split(" ").slice(0, 4) %></p>   -->
+<!-- 
+                                    <p class="card-text deadline"><%=result.waktu_target_selesai %></p> -->
                                 </div>
                             </div>
                         </div>
@@ -58,12 +61,10 @@
                                     <div class="left-green"></div>
                                     <div class="card-left">
                                         <h5 class="card-title mou">MoU Kerja Sama</h5>
-                                        <p class="card-text">27/12/2019</p>
                                     </div>
                                     <div class="card-right">
-                                        <a class="selengkapnya" href="#">BUKA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                        <a class="selengkapnya" href="user-uploads/pdf/mou/<%= result.mou_kerjasama %>">BUKA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -78,22 +79,27 @@
                     <div class="row mt-1">
                         <div class="col-md-12">
                             <ul class="stepper stepper-vertical">
-                                <li class="completed">
-                                    <p class="card-text" id="tanggal-progress">27/12/2019</p>
-                                    <h4 class="label">Penandatanganan MoU</h4>
-                                    <div class="dokumentasi-progress">
-                                        <button class="btn"><img src="img/document-icon.svg" alt=""></button>
-                                        <button class="btn"><img src="img/kerjasama-pic.png" alt=""></button>
-                                        <button class="btn"><img src="img/kerjasama-pic.png" alt=""></button>
-                                    </div>
-                                </li>
-                                <li class="on-going">
+                                <% let progress = false; %>
+
+                                <% for(let i = 0; i < progress.length; i++){ %>
+                                    <% progress = true; %>
+                                    <li class="completed">
+                                        <p class="card-text" id="tanggal-progress"><%= progress[i].tanggal_progress.toString().split(" ").slice(0, 4)  %>></p>
+                                        <div class="dokumentasi-progress">
+                                            <p> <%= progress[i].deskripsi_progress %> </p>p>
+                                        </div>
+                                    </li>
+                                <% } %>
+                                <% if(!progress) {%>
+                                    <p>Belum ada progress</p>
+                                <% }%>
+                                <!-- <li class="on-going">
                                     <p class="card-text" id="tanggal-progress">27/12/2019</p>
                                     <h4 class="label">Pembelian Pakan</h4>
                                     <button class="btn"><img src="img/document-green-icon.svg" alt=""></button>
-                                </li>
+                                </li> -->
                             </ul>
-                            <button class="update-progress">Update Progress</button>
+                            <!-- <button class="update-progress">Update Progress</button> -->
                         </div>
                     </div>
 
