--- a/views/sidebarDesa.ejs
+++ b/views/sidebarDesa.ejs
@@ -18,7 +18,8 @@
     <nav>
 
         <div>
-            <img width="280px" src="img/profilDesa.png" alt="">
+            <img class="foto-perusahaan" width="280px" src="user-uploads/img/<%=user.foto%>" alt="">
+            
         </div>
         <br>
         <div class="profil">
