--- a/views/dashboardDesa.ejs
+++ b/views/dashboardDesa.ejs
@@ -4,104 +4,157 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard Desa</title>
+    <title>Dashboard Investor</title>
     <link rel="stylesheet" href="css/dashboard.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
 <body>
     <%- include('sideBarDesa'); -%>
+
+        <!-- <nav class="navbar fixed-top">
+            <div class="nav-brand left">
+                <img class="nav-logo" src="img/koostoo-logo.svg" alt="">
+            </div>
+            <div class="nav-brand right">
+                <button class="nav-mail btn"><img src="img/mail-icon.svg" alt=""></button>
+                <button class="nav-bell btn"><img src="img/bell-icon.svg" alt=""></button>
+            </div>
+        </nav> -->
         <div class="container">
-            <section class="tawaran-kerjasama">
-                <h2 class="section-title">Tawaran Kerja Sama</h2>
+            <section class="menunggu-konfirmasi">
+                <h2 class="section-title">Menunggu Konfirmasi</h2>
+                <% let bool=false%>
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <p class="waktu-penawaran">2 hari yang lalu</p>
-                                <h5 class="card-title">Butuh Lele Segar 5 Kg</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 100.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "menunggu") {%>
+                                  <% bool = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="/project-list?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <p class="waktu-penawaran">2 hari yang lalu</p>
-                                <h5 class="card-title">Butuh Lele Segar 5 Kg</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 100.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        
+                            <% } %>
+
+                <% } %>
+
+
                 </div>
+                <% if (!bool) {%>
+                    <div class="belum-cari-target">
+                        <p>Tidak ada proyek yang sedang dalam tahap menunggu konfirmasi</p>
+                    </div>
+                <%} %>
+
+
+                
             </section>
+
+
             <section class="dalam-pengerjaan">
                 <h2 class="section-title">Dalam Pengerjaan</h2>
+                <% let bool2=false%>
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Susu Segar 20 Liter/hari</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "dikerjakan") {%>
+                                  <% bool2 = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="/project-list?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Susu Segar 20 Liter/hari</h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        
+                            <% } %>
+
+                <% } %>
+
+
                 </div>
+                <% if (!bool2) {%>
+                    <div class="belum-cari-target">
+                        <p>Tidak ada proyek yang sedang dalam tahap pengerjaan.</p>
+                    </div>
+                <%} %>
+
+
+                
             </section>
+
+
+
             <section class="selesai">
                 <h2 class="section-title">Selesai</h2>
+                <% let bool3=false%>
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Telur Ayam Kampung </h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                    <% for(let i = 0; i < result.length; i++) {%>
+                    
+                        <% if(result[i].status == "selesai") {%>
+                                  <% bool3 = true %>
+                                  <div style="margin-top: 20px;" class="col-sm-6">
+                                    <div class="card dashboard">
+                                        <div class="card-body">
+                                            <h5 class="card-title"><%=result[i].nama_proyek %></h5>
+                                            <p class="card-text"><%=result[i].nama_perusahaan %></p>
+                                            <h6 class="card-text"><%=result[i].nilai_proyek %></h6>
+                                            <div class="btn-selengkapnya">
+                                                <a class="selengkapnya" href="/project-list?id=<%= result[i].id_proyek %>">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
-                        <div class="card dashboard">
-                            <div class="card-body">
-                                <h5 class="card-title">Butuh Telur Ayam Kampung </h5>
-                                <p class="card-text">PT Maju Makmur</p>
-                                <h6 class="card-text">Rp 10.000.000,00</h6>
-                                <div class="btn-selengkapnya">
-                                    <a class="selengkapnya" href="#">SELENGKAPNYA<span class="next-icon"><img src="img/next-icon.svg" alt=""></span></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                        
+                            <% } %>
+
+                <% } %>
+
+
                 </div>
+                <% if (!bool3) {%>
+                    <div class="card proyek-not-selesai">
+                        <p>Semua proyek Anda masih dalam tahap pengerjaan</p>
+                    </div>
+                <%} %>
+
+
+               
             </section>
         </div>
+
+        <style>
+
+.portofolio-desa{
+    text-decoration: none;
+    background: #3B8C91;
+    padding: 4px 15px;
+    border-radius: 12px;
+    color: white;
+    font-size: 11px;
+    border: none;
+    letter-spacing: 0.045em;
+    box-shadow: 2px 4px 8px rgba(0, 0, 0, 0.15);
+    border-radius: 24px;
+    border: none;
+    margin: 8px;
+}
+
+        </style>
 </body>
 
 </html>
